--- a/template/jersey_server.tmpl
+++ b/template/jersey_server.tmpl
@@ -1,22 +1,18 @@
-{n{$meta_left := "{"}}
-{{$meta_right := "}"}}
 // main server configuration
-@PerThread
-@API(value="{{.BasePath}}",description="{{.Description}}",
-basePath="{{.BasePath}}")
-public class {{.ServiceName}} {
+package {{.Package}}.config;
 
-	private @Inject ;
-	private static final ExecutorService TASK_EXECUTOR = Executors.newCachedThreadPool();
+import org.springframework.stereotype.Component;
 
-{{range .Methods}}
-	@{{.HTTPMethod}}
-	@Path(value = "{{.Path}}")
-	@Produces(MediaType.{{ArrayToString .Produces}})
-	@Consuems(MediaType.{{ArrayToString .Consumes}})
-	public Response {{.LowerOperationId}}({{range .PathParam}}@PathParam("{{.Name}}"){{.Type}} {{.Name}},{{end}}) throws Exception
+import com.assurant.inc.stereotype.AEBJerseyConfig;
+import com.assurant.inc.stereotype.EnableSwagger;
+
+@Component
+@EnableSwagger(basePath="{{.BasePath}}", version="{{.ServiceVersion}}", description={{QuoteString .Description}}, resourcePackage="{{.Package}}.endpoints",
+contact="{{.ContactEmail}}", termsOfServiceUrl="{{.LicenseName}}")
+public class JerseyConfig extends AEBJerseyConfig
+{
+	public JerseyConfig()
 	{
-		return Response.status(200).entity({{range .BodyParam}}{{.Name}}{{end}}).build();
+		super()
 	}
-{{end}}
 }
